[package]
name = "corona"
version = "0.1.0"
authors = ["timo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = { version = "0.2.13", features = ["full"] }
serde_json = "1.0.48"
serde = {version="1.0", features=["derive"]}
dipstick = "0.7.11"
itertools = "0.9.0"
